# easyfloat

./: .gitignore  README.md  build.sbt  fp_consts.py  pyproject.toml
pyeasyfloat/: backend.py  div.py  exp.py  float.py  fma.py  fp_utils.py  reciprocal.py  rounding.py
src/main/scala/easyfloat/: Div.scala  Exp2.scala  FMA.scala  RawFloat.scala  Reciprocal.scala  Rounding.scala  Utils.scala
tests/: backend.py  div_test.py  exp2_accuracy.py  exp_test.py  fma_test.py  reciprocal_test.py
