[project]
name = "easyfloat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pyverilator",
]

[tool.uv.sources]
pyverilator = { git = "https://github.com/ljwljwljwljw/pyverilator.git", rev = "master" }
