[project]
name = "pyeasyfloat"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pyverilator",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyeasyfloat"]

[tool.uv.sources]
pyverilator = { git = "https://github.com/ljwljwljwljw/pyverilator.git", rev = "master" }
